[package]
name = "apisix-rs"
version = "1.2.0"
edition = "2024"
description = "Apisix utils"
license = "MIT"
homepage = "https://mirabo-global.com"
repository = "https://github.com/mirabo-global/apisix-rs"
readme = "README.md"
keywords = ["apisix", "actix-web", "axum", "extractor", "api-gateway"]
categories = ["web-programming", "authentication"]


[features]
default = []
actix = ["dep:actix-web"]
axum = ["dep:axum"]

[dependencies]
actix-web = { version = "^4.13", optional = true }
axum = { version = "^0.8", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0"}
thiserror = { version = "^2.0" }
base64 = { version = "^0.22" }

[dev-dependencies]
actix-rt = { version = "^2.9"}
tokio = { version = "^1.0", features = ["full"] }
